changed room html and css

--- a/resources/room_skeleton.html
+++ b/resources/room_skeleton.html
@@ -12,11 +12,23 @@
 
 
 <!--        question-->
-        <div class="question row">
-            <h2 class="col-xs-3">1000</h2>
-            <p class="col-xs-8">question text lalalala jkshfkjh ksjhdfsdkjh lsfhsjlf kjshfjhds</p>
+        <div class="question">
+            <h2 class="col-xs-2">1000</h2>
+            <div class="col-xs-9">
+                <p>question text lalalala jkshfkjh ksjhdfsdkjh lsfhsjlf kjshfjhds</p>
+            </div>
             <div class="button col-xs-1">
-                <button class="up">up</button>
+                <button class="up">u</button>
+                <button class="down">d</button>
+            </div>
+
+        </div>
+
+        <div class="question">
+            <h2 class="col-xs-2">500</h2>
+            <p class="col-xs-9">question text lalalala jkshfkjh ksjhdfsdkjh lsfhsjlf kjshfjhds</p>
+            <div class="button col-xs-1">
+                <button class="up">u</button>
                 <button class="down">d</button>
             </div>
 
