--- a/resources/room_skeleton.html
+++ b/resources/room_skeleton.html
@@ -12,24 +12,26 @@
 
 
 <!--        question-->
-        <div class="question">
+        <div class="question panel">
             <h2 class="col-xs-2">1000</h2>
             <div class="col-xs-9">
                 <p>question text lalalala jkshfkjh ksjhdfsdkjh lsfhsjlf kjshfjhds</p>
             </div>
             <div class="button col-xs-1">
-                <button class="up">u</button>
-                <button class="down">d</button>
+                <button class="up btn">u</button>
+                <button class="down btn">d</button>
             </div>
 
         </div>
 
-        <div class="question">
+        <div class="question panel">
             <h2 class="col-xs-2">500</h2>
-            <p class="col-xs-9">question text lalalala jkshfkjh ksjhdfsdkjh lsfhsjlf kjshfjhds</p>
+            <div class="col-xs-9">
+                <p>question text lalalala jkshfkjh ksjhdfsdkjh lsfhsjlf kjshfjhds</p>
+            </div>
             <div class="button col-xs-1">
-                <button class="up">u</button>
-                <button class="down">d</button>
+                <button class="btn up">u</button>
+                <button class="btn down">d</button>
             </div>
 
         </div>
