--- a/resources/room_owner.html
+++ b/resources/room_owner.html
@@ -3,8 +3,10 @@
     <head>
         <meta name=viewport content="width=device-width, initial-scale=1">
           <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-        <!--  <link href="public/freelancer.css" rel="stylesheet" type="text/css">-->
+
           <link href="public/style.css" rel="stylesheet" type="text/css">
+
+
           <script src="http://code.jquery.com/jquery-2.1.1.min.js" type="text/javascript">
           </script>
           <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js" type="text/javascript">
@@ -30,19 +32,21 @@
 
             </div>
 
+<!--
             <div class="question panel">
                 <h2 class="col-xs-2">500</h2>
                 <div class="col-xs-8">
                     <p>Where are my potatoes?</p>
                 </div>
                 <div class="button col-xs-2">
-                    <button class="btn btn-default glyphicon glyphicon-remove"></button>
+                    <button class="btn btn-default glyphicon remove glyphicon-remove"></button>
                 </div>
 
             </div>
 
             <div class="footer">footer with submit
                 </div>
+-->
       </div>
   </body>
 </html>
