html must match example path

--- a/resources/room.html
+++ b/resources/room.html
@@ -15,6 +15,6 @@
   </head>
   <body>
     <div id="content"></div>
-    <script type="text/jsx" src="public/scripts/exampleTEST4.js"></script>
+    <script type="text/jsx" src="public/scripts/example.js"></script>
   </body>
 </html>
