--- a/resources/audience.html
+++ b/resources/audience.html
@@ -4,10 +4,7 @@
     <title>Hello React</title>
     <meta name=viewport content="width=device-width, initial-scale=1">
     <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-<!--    <link href="public/freelancer.css" rel="stylesheet" type="text/css">-->
-    <link href="public/style.css" rel="stylesheet" type="text/css">
-    <!-- Not present in the tutorial. Just for basic styling. -->
-    <link rel="stylesheet" href="css/base.css" />
+    <link href="/public/style.css" rel="stylesheet" type="text/css">
     <script src="http://cdnjs.cloudflare.com/ajax/libs/react/0.11.1/react.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/react/0.11.1/JSXTransformer.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -15,6 +12,6 @@
   </head>
   <body>
     <div id="content"></div>
-    <script type="text/jsx" src="public/scripts/example.js"></script>
+    <script type="text/jsx" src="/public/scripts/audience.js"></script>
   </body>
 </html>
