--- a/resources/index.html
+++ b/resources/index.html
@@ -2,18 +2,20 @@
 <html>
   <head>
     <meta name=viewport content="width=device-width, initial-scale=1">
+
+    <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
     <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="public/style.css" rel="stylesheet" type="text/css">
     <script src="http://code.jquery.com/jquery-2.1.1.min.js" type="text/javascript">
     </script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js" type="text/javascript">
     </script>
-  </head>
-  <body>
-    <nav class="navbar navbar-default navbar-fixed-top glass" role="navigation">
-      <div class="container">
-        Quand- simply the best thing ever
-      </div>
+</head>
+<body>
+     <nav class="navbar navbar-default navbar-fixed-top glass" role="navigation">
+  <div class="container">
+    <h1>Quand</h1>
+  </div>
     </nav>
     <div class="container">
       <div class="jumbotron">
